# W-N-aggregator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  bot.py  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
db/: db.py  tables.py
handlers/: forecast.py  help.py  menu.py  news.py  start.py  weather.py
keyboards/: inline.py
migrations/: env.py
migrations/versions/: 6081b37a9193_init.py
services/: news.py  scheduler.py  weather.py
src/: bot.py
src/db/: db.py
src/handlers/: forecast.py  help.py  menu.py  news.py  start.py  weather.py
src/wn_aggregator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_news_service.py  test_scheduler.py  test_weather_service.py
tests/test_handlers/: test_help.py  test_menu.py  test_start.py  test_weather.py
